# FlightgearMidi

./: .gitignore  CMakeCogMain.j2  CMakeCogMain.py  CMakeLists.txt  README.md  SBOM.md  example.yaml  main.cpp  pyproject.toml  pyprojectCog.j2  pyprojectCog.py
.github/workflows/: build-wheels.yml  build-wheels.yml.onlyMacOsWorks.txt  build-wheels.yml.workedBefore.txt  main.yml
FlightgearMidi/: CMakeLists.txt  FlightgearMidi.cpp  FlightgearMidiCog.j2  FlightgearMidiCog.py  __init__.py
MyLib/: CMakeCog.j2  CMakeCog.py  CMakeLists.txt
MyLib/hpp/: DataConfig.hpp  HttpdClient.hpp  LibreMidiInPort.hpp  LibreMidiOutPort.hpp  MidiClient.hpp  MidiClientItf.hpp  MidiClientUtil.hpp  TelnetClient.hpp
MyLibPy/: CMakeLists.txt  MyLibPy.cpp
additionalTestTools/TopographicMap/: readme.md
additionalTestTools/topographicMap/: index.html  readme.md
program-changer/: CMakeCogMain.j2  CMakeCogMain.py  CMakeLists.txt  main.cpp
program-changer/MyLib/: CMakeCog.j2  CMakeCog.py  CMakeLists.txt  TelnetClient.cpp  TelnetClient.h
program-changer/MyLib/hpp/: MidiClient.hpp  MidiClientItf.hpp  MidiClientUtil.hpp  TelnetClient.hpp  midievent.hpp  midieventCommon.h  midieventCommon.hpp
program-changer/MyLibPy/: CMakeLists.txt  MyLibPy.cpp
py/: main.py
scripts/: GenHpp.py  runCog.sh
testPy/: FlightgearMidiHelper.py  FlightgearMidiUtils.py  LaunchControlXL.py  LaunchControlXL_172P.py  LaunchControlXL_182S.py  personal.py  test.py
