# [[[cog
# import cog
# from pyprojectCog import getText
# cog.outl(getText())
# ]]]
[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"] # Changed from 3.9 to 3.0
build-backend = "scikit_build_core.build"

[project]
name = "FlightgearMidi"
version = "0.14.0"
requires-python = ">=3.9" # This is where Python 3.9 actually belongs!

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["FlightgearMidi"]  # Bundles python folder 

cmake.args = [
    "-DCPR_FORCE_USE_SYSTEM_CURL=OFF",
    "-DCPR_USE_SYSTEM_CURL=OFF",
    "-DCPR_ENABLE_SSL=ON",
    "-DCPR_BUILD_SHARED_LIBS=OFF",  
    "-DBUILD_SHARED_LIBS=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",    
    "-DBUILD_TESTING=OFF",
    "-DCPR_BUILD_TESTS=OFF",
    "-DCPR_BUILD_TESTS_BY_DEFAULT=OFF",
    "-DCURL_DISABLE_LIBPSL=ON",
    "-DCURL_USE_LIBPSL=OFF",
    "-DCPR_ENABLE_LIBPSL=OFF",
    "-DCPR_USE_SYSTEM_LIB_PSL=OFF"  
]
# [[[end]]]
